[package]
edition = "2021"
name = "jane2411"
version = "0.0.4"
authors = ["Logan Teder"]
description = "My attempt at a solution to Jane Street's November 2024 puzzle"

[package.metadata]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
indicatif = "0.17"
rand = "0.8"
rand_xoshiro = "0.6.0"
rayon = "1.10"

[profile.dev]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
